Finished area functions and screens

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,4 +14,30 @@
     <string name="cube">CUBE</string>
     <string name="strAreaTitle">AREAS</string>
     <string name="cylinder">CYLINDER</string>
+    <string name="strSquereSide">Side value</string>
+    <string name="strCalculate">Calculate</string>
+    <string name="strClear">Clear</string>
+    <string name="strRectangleTitle">RECTANGLE</string>
+    <string name="strBase">Base</string>
+    <string name="strHeight">Height</string>
+    <string name="strPerformedTitle">PERFORMED</string>
+    <string name="strRowNum">#</string>
+    <string name="strOperations">ACTIONS</string>
+    <string name="lblData">DATA</string>
+    <string name="strResult">RESULTS</string>
+    <string name="strSquareArea">Square Area</string>
+    <string name="strRectangleArea">Rectangle Area</string>
+    <string name="strTriangleArea">Triangle Area</string>
+    <string name="strCircleArea">Circle Area</string>
+    <string name="strSphereVolume">Sphere Volume</string>
+    <string name="strCylinderVolume">Cylinder Volume</string>
+    <string name="strConeVolume">Cone Volume</string>
+    <string name="strCubeVolume">Cube Volume</string>
+    <string name="strAreaResult">The area is: -area-</string>
+    <string name="strVolumeResult">The volume is: -volume-</string>
+    <string name="strRequireField">Required field</string>
+    <string name="strOkButton">ok</string>
+    <string name="strTriangleTitle">TRIANGLE</string>
+    <string name="strCircleTitle">CIRCLE</string>
+    <string name="strCircleRadius">Radius</string>
 </resources>
